Added app engine maven plugin to enable command line execution.

--- a/pom.xml
+++ b/pom.xml
@@ -68,4 +68,13 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>appengine-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
