--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,7 @@ management:
     health:
         diskspace:
             enabled: false # App Engine Standard does not allow disk access
+
+security:
+    basic:
+        enabled: false
